Bug 64365 - Shutdown services don't always run
Summary: Shutdown services don't always run
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-08 15:58 UTC by Dave Reisner
Modified: 2013-05-15 22:26 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Dave Reisner 2013-05-08 15:58:38 UTC
We're noticing that services at shutdown don't always run. It's most evident with systemd-update-utmp-shutdown.service which should be logging to lastlog, but definitely isn't:

$ last | grep 'system boot' | sed q
reboot   system boot  3.7.3-rampage    Thu Jan 24 13:57 - 17:47 (9+03:49)

I have VMs which I've built recently which have no reboot entries in lastlog.

This is reproducible with the latest git commit as of this filing (cdf173349c73c9)

Downstream bug report: https://bugs.archlinux.org/task/34708
Comment 1 Lennart Poettering 2013-05-15 22:26:44 UTC
So this is caused by systemd-update-utmp-shutdown.service pulling in start jobs that conflict with stop jobs for the same unit that are created by shutdown.target.

I fixed this now in git:

http://cgit.freedesktop.org/systemd/systemd/commit/?id=3f92e4b4b61042391bd44de4dceb18177df0dd57


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.